# Text-Editor

./: .gitignore  CMakeLists.txt
Project/include/: MyVim.h
Project/src/: CMakeLists.txt  changeStack.c  editorUndo.c  find.c  goToLine.c  handleArgv.c  highlight_database.c  input.c  main.c  onSaveOpenSyntax.c  open.c  removeTextIfSelected.c  replace.c  syntax.c  syntaxOpenCloseTags.c  syntaxSelectedText.c
